{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 164,
  "lineage": "86f618be-fa52-d712-4b2a-21cf1ac31fae",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254361319875:security-group/sg-0db0351a327e1c3ac",
            "description": "Allow MySQL access from inside VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db0351a327e1c3ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "MySQL from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "fishing-game-rds-sg",
            "name_prefix": "",
            "owner_id": "254361319875",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ce2500ea97f15ef5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254361319875",
            "id": "sg-0db0351a327e1c3ac",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254361319875:network-acl/acl-0ad2aabc78982a117",
            "default_network_acl_id": "acl-0ad2aabc78982a117",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ad2aabc78982a117",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "254361319875",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-02e4da4663aa41583",
              "subnet-04736a22274b25a26"
            ],
            "tags": {
              "Name": "fishing-game-vpc-default"
            },
            "tags_all": {
              "Name": "fishing-game-vpc-default"
            },
            "vpc_id": "vpc-0ce2500ea97f15ef5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254361319875:route-table/rtb-0681669bcc4b61e5c",
            "default_route_table_id": "rtb-0681669bcc4b61e5c",
            "id": "rtb-0681669bcc4b61e5c",
            "owner_id": "254361319875",
            "propagating_vgws": null,
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "fishing-game-vpc-default"
            },
            "tags_all": {
              "Name": "fishing-game-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ce2500ea97f15ef5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254361319875:security-group/sg-02efa93f8cd76e695",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02efa93f8cd76e695",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "254361319875",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fishing-game-vpc-default"
            },
            "tags_all": {
              "Name": "fishing-game-vpc-default"
            },
            "vpc_id": "vpc-0ce2500ea97f15ef5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-086339c947c32ae87",
            "arn": "arn:aws:ec2:us-east-1:254361319875:elastic-ip/eipalloc-086339c947c32ae87",
            "domain": "vpc",
            "id": "eipalloc-086339c947c32ae87",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-32-195-23-16.compute-1.amazonaws.com",
            "public_ip": "32.195.23.16",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "fishing-game-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "fishing-game-vpc-us-east-1a"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254361319875",
            "id": "eipalloc-086339c947c32ae87",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254361319875:internet-gateway/igw-07316d7a17b04d37a",
            "id": "igw-07316d7a17b04d37a",
            "owner_id": "254361319875",
            "region": "us-east-1",
            "tags": {
              "Name": "fishing-game-vpc"
            },
            "tags_all": {
              "Name": "fishing-game-vpc"
            },
            "vpc_id": "vpc-0ce2500ea97f15ef5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254361319875",
            "id": "igw-07316d7a17b04d37a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-086339c947c32ae87",
            "association_id": "eipassoc-0f3bf1a21e7cc73d8",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-002afab755eaea908",
            "network_interface_id": "eni-0d0365cae8acf2f09",
            "private_ip": "10.0.1.155",
            "public_ip": "32.195.23.16",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02e4da4663aa41583",
            "tags": {
              "Name": "fishing-game-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "fishing-game-vpc-us-east-1a"
            },
            "vpc_id": "vpc-0ce2500ea97f15ef5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254361319875",
            "id": "nat-002afab755eaea908",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0906b492a052d58291080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-002afab755eaea908",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0906b492a052d5829",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254361319875",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0906b492a052d5829"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07316d7a17b04d37a",
            "id": "r-rtb-0d030f70ba13f72f41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0d030f70ba13f72f4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254361319875",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0d030f70ba13f72f4"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254361319875:route-table/rtb-0906b492a052d5829",
            "id": "rtb-0906b492a052d5829",
            "owner_id": "254361319875",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "fishing-game-vpc-private"
            },
            "tags_all": {
              "Name": "fishing-game-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce2500ea97f15ef5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254361319875",
            "id": "rtb-0906b492a052d5829",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254361319875:route-table/rtb-0d030f70ba13f72f4",
            "id": "rtb-0d030f70ba13f72f4",
            "owner_id": "254361319875",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "fishing-game-vpc-public"
            },
            "tags_all": {
              "Name": "fishing-game-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce2500ea97f15ef5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254361319875",
            "id": "rtb-0d030f70ba13f72f4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de7f9dcaa9565bde",
            "region": "us-east-1",
            "route_table_id": "rtb-0906b492a052d5829",
            "subnet_id": "subnet-05e20f1e3107a99a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254361319875",
            "id": "rtbassoc-0de7f9dcaa9565bde",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00864f1940ef27ae6",
            "region": "us-east-1",
            "route_table_id": "rtb-0906b492a052d5829",
            "subnet_id": "subnet-0bb8e6e8b4306b9e9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254361319875",
            "id": "rtbassoc-00864f1940ef27ae6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cee41bdfc073968",
            "region": "us-east-1",
            "route_table_id": "rtb-0d030f70ba13f72f4",
            "subnet_id": "subnet-02e4da4663aa41583"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254361319875",
            "id": "rtbassoc-09cee41bdfc073968",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a092f5eddd1f453d",
            "region": "us-east-1",
            "route_table_id": "rtb-0d030f70ba13f72f4",
            "subnet_id": "subnet-04736a22274b25a26"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254361319875",
            "id": "rtbassoc-0a092f5eddd1f453d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254361319875:subnet/subnet-05e20f1e3107a99a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e20f1e3107a99a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "254361319875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "fishing-game-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "fishing-game-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-0ce2500ea97f15ef5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254361319875",
            "id": "subnet-05e20f1e3107a99a2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254361319875:subnet/subnet-0bb8e6e8b4306b9e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb8e6e8b4306b9e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "254361319875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "fishing-game-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "fishing-game-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-0ce2500ea97f15ef5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254361319875",
            "id": "subnet-0bb8e6e8b4306b9e9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254361319875:subnet/subnet-02e4da4663aa41583",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e4da4663aa41583",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "254361319875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "fishing-game-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "fishing-game-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-0ce2500ea97f15ef5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254361319875",
            "id": "subnet-02e4da4663aa41583",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254361319875:subnet/subnet-04736a22274b25a26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04736a22274b25a26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "254361319875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "fishing-game-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "fishing-game-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-0ce2500ea97f15ef5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254361319875",
            "id": "subnet-04736a22274b25a26",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254361319875:vpc/vpc-0ce2500ea97f15ef5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad2aabc78982a117",
            "default_route_table_id": "rtb-0681669bcc4b61e5c",
            "default_security_group_id": "sg-02efa93f8cd76e695",
            "dhcp_options_id": "dopt-075c65a6d3f535a76",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ce2500ea97f15ef5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0681669bcc4b61e5c",
            "owner_id": "254361319875",
            "region": "us-east-1",
            "tags": {
              "Name": "fishing-game-vpc"
            },
            "tags_all": {
              "Name": "fishing-game-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254361319875",
            "id": "vpc-0ce2500ea97f15ef5",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}